{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 166,
  "lineage": "691b637e-f80f-830f-2f14-7b6f2d9ae6dd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136929302103:vpc/vpc-1c1c1966",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-bd180ed1",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-a3c563d9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-1c1c1966",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-f6880888",
            "owner_id": "136929302103",
            "tags": {
              "Name": "default",
              "enableDnsHostnames": "true",
              "enableDnsSupport": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-managed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:136929302103:instance/i-0e6b7b88866c5f844",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6b7b88866c5f844",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-089b4d131df83f77b",
            "private_dns": "ip-10-0-1-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07bf209448372b584",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2338f3ab9c5259f",
            "tags": {
              "Name": "Prd"
            },
            "tags_all": {
              "Name": "Prd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09607340e1b03ace8"
            ]
          },
          "dependencies": [
            "aws_security_group.allow-ssh-web",
            "aws_subnet.subnet-prd-a",
            "aws_vpc.vpc-prd",
            "data.aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw-prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136929302103:internet-gateway/igw-016fe5d75f9530356",
            "id": "igw-016fe5d75f9530356",
            "owner_id": "136929302103",
            "tags": {
              "Name": "gw-prd"
            },
            "tags_all": {
              "Name": "gw-prd"
            },
            "vpc_id": "vpc-09c5e352fe828dec0"
          },
          "dependencies": [
            "aws_vpc.vpc-prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136929302103:route-table/rtb-0c28b015f2ede106a",
            "id": "rtb-0c28b015f2ede106a",
            "owner_id": "136929302103",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016fe5d75f9530356",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016fe5d75f9530356",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-prd"
            },
            "tags_all": {
              "Name": "rt-prd"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c5e352fe828dec0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw-prd",
            "aws_vpc.vpc-prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-dev-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0766a0a3a30f4eba4",
            "route_table_id": "rtb-0c28b015f2ede106a",
            "subnet_id": "subnet-0853175cee5ed9391"
          },
          "dependencies": [
            "aws_internet_gateway.gw-prd",
            "aws_route_table.rt-prd",
            "aws_subnet.subnet-dev-a",
            "aws_vpc.vpc-prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-prd-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0126528d8a68636fc",
            "route_table_id": "rtb-0c28b015f2ede106a",
            "subnet_id": "subnet-0c2338f3ab9c5259f"
          },
          "dependencies": [
            "aws_internet_gateway.gw-prd",
            "aws_route_table.rt-prd",
            "aws_subnet.subnet-prd-a",
            "aws_vpc.vpc-prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc_prv",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136929302103:security-group/sg-09607340e1b03ace8",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09607340e1b03ace8",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.69.109.181/32"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "73.69.109.181/32"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "73.69.109.181/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-web-traffic",
            "name_prefix": "",
            "owner_id": "136929302103",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-web-traffic"
            },
            "tags_all": {
              "Name": "allow-ssh-web-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c5e352fe828dec0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-prd",
            "data.aws_vpc.default-vpc"
          ]
        },
        {
          "index_key": "vpc_pub",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136929302103:security-group/sg-0c79cf82397f7b195",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c79cf82397f7b195",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.69.109.181/32"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "73.69.109.181/32"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "73.69.109.181/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-web-traffic",
            "name_prefix": "",
            "owner_id": "136929302103",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-web-traffic"
            },
            "tags_all": {
              "Name": "allow-ssh-web-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-1c1c1966"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-prd",
            "data.aws_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-dev-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136929302103:subnet/subnet-0853175cee5ed9391",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0853175cee5ed9391",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136929302103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-dev-a"
            },
            "tags_all": {
              "Name": "subnet-dev-a"
            },
            "vpc_id": "vpc-09c5e352fe828dec0"
          },
          "dependencies": [
            "aws_vpc.vpc-prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-prd-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136929302103:subnet/subnet-0c2338f3ab9c5259f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2338f3ab9c5259f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136929302103",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-prd-a"
            },
            "tags_all": {
              "Name": "subnet-prd-a"
            },
            "vpc_id": "vpc-09c5e352fe828dec0"
          },
          "dependencies": [
            "aws_vpc.vpc-prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136929302103:vpc/vpc-09c5e352fe828dec0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09ce1bb82bf18f2a5",
            "default_route_table_id": "rtb-0506516e0462cd602",
            "default_security_group_id": "sg-080d02c0948e9e447",
            "dhcp_options_id": "dopt-a3c563d9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c5e352fe828dec0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0506516e0462cd602",
            "owner_id": "136929302103",
            "tags": {
              "Name": "vpc-prd"
            },
            "tags_all": {
              "Name": "vpc-prd"
            }
          }
        }
      ]
    },
    {
      "module": "module.matt_webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:136929302103:instance/i-0b3a8c0573113ff90",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3a8c0573113ff90",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0be761b42eaf96133",
            "private_dns": "ip-172-31-17-179.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.179",
            "public_dns": "ec2-3-80-112-203.compute-1.amazonaws.com",
            "public_ip": "3.80.112.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f586f095c1f944ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow-ssh-traffic-Matt Web Server"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-8d1da4c0",
            "tags": {
              "Name": "Matt Web Server"
            },
            "tags_all": {
              "Name": "Matt Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f47b97e75813b6b6"
            ]
          },
          "dependencies": [
            "module.matt_webserver.aws_security_group.allow-ssh-web"
          ]
        }
      ]
    },
    {
      "module": "module.matt_webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:136929302103:security-group/sg-0f47b97e75813b6b6",
            "description": "Allow inbound traffic for Matt Web Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f47b97e75813b6b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "73.69.109.181/32"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "73.69.109.181/32"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "73.69.109.181/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-traffic-Matt Web Server",
            "name_prefix": "",
            "owner_id": "136929302103",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-web-traffic"
            },
            "tags_all": {
              "Name": "allow-ssh-web-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-1c1c1966"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}